--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>Hellooooooo</h1>
+    <header>
+        <div class="img-container">
+            <img src="./images/logo.svg" alt="Company Logo">
+        </div>
+    </header>
+    <section>
+        <main></main>
+    </section>
+    <section></section>
+    <footer></footer>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
