hero img and main header

--- a/index.html
+++ b/index.html
@@ -3,19 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Frontend Mentor | Meet landing page</title>
     <link rel="icon" type="image/png" href="./images/favicon-32x32.png">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <div class="img-container">
+        <div id="logo-container" class="flex-container">
             <img src="./images/logo.svg" alt="Company Logo">
         </div>
     </header>
     <section>
-        <main></main>
+        <div class="flex-container">
+            <img class="hero-image hero-left" src="./images/tablet/image-hero.png" alt="Users">
+        </div>
+        <main id="content">
+            <h1 class="text-preset-1">Group Chat for Everyone</h1>
+            <p></p>
+            <div class="btn-container">
+                <button></button>
+                <button></button>
+            </div>
+        </main>
+        <div class="flex-container">
+            <img class="hero-right" src="./images/desktop/image-hero-right.png" alt="Users">
+        </div>
     </section>
     <section></section>
     <footer></footer>
