main text and buttons

--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 </head>
 <body>
     <header>
-        <div id="logo-container" class="flex-container">
+        <div id="logo-container" class="flex">
             <img src="./images/logo.svg" alt="Company Logo">
         </div>
     </header>
     <section>
-        <div class="flex-container">
+        <div class="flex">
             <img class="hero-image hero-left" src="./images/tablet/image-hero.png" alt="Users">
         </div>
         <main id="content">
-            <h1 class="text-preset-1">Group Chat for Everyone</h1>
-            <p></p>
-            <div class="btn-container">
-                <button></button>
-                <button></button>
+            <h1 class="header-text">Group Chat for Everyone</h1>
+            <p class="mt24 mb24">Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
+            <div class="btn-container flex">
+                <button class="btn btn-cyan mb16">Download <span>v1.3</span></button>
+                <button class="btn btn-purple btn-small">What is it?</button>
             </div>
         </main>
-        <div class="flex-container">
+        <div class="flex">
             <img class="hero-right" src="./images/desktop/image-hero-right.png" alt="Users">
         </div>
     </section>
