--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <img class="hero-right" src="./images/desktop/image-hero-right.png" alt="Users">
         </div>
     </section>
+    <div class="number-icon mb64">
+        <div class="vertical-line"></div>
+        <div class="numbered-circle">01</div>
+    </div>
     <section></section>
     <footer></footer>
     <!-- Script -->
