--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <section>
         <div class="flex">
-            <img class="hero-image hero-left" src="./images/tablet/image-hero.png" alt="Users">
+            <img class="hero-image hero-left" src="./images/tablet/image-hero.png" alt="User profile images">
         </div>
         <main id="content">
             <h1 class="header-text">Group Chat for Everyone</h1>
@@ -27,14 +27,22 @@
             </div>
         </main>
         <div class="flex">
-            <img class="hero-right" src="./images/desktop/image-hero-right.png" alt="Users">
+            <img class="hero-right" src="./images/desktop/image-hero-right.png" alt="User profile images">
         </div>
     </section>
     <div class="number-icon mb64">
         <div class="vertical-line"></div>
         <div class="numbered-circle">01</div>
     </div>
-    <section></section>
+    <section id="sub-section">
+        <div id="img-container">
+            <img class="img-group grid-right" src="./images/desktop/image-woman-in-videocall.jpg" alt="People enjoying our app">
+            <img class="img-group" src="./images/desktop/image-women-videochatting.jpg" alt="People enjoying our app">
+            <img class="img-group grid-right" src="./images/desktop/image-men-in-meeting.jpg" alt="People enjoying our app">
+            <img class="img-group" src="./images/desktop/image-man-texting.jpg" alt="People enjoying our app">
+        </div>
+
+    </section>
     <footer></footer>
     <!-- Script -->
     <script src="script.js"></script>
