--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <img class="img-group grid-right" src="./images/desktop/image-men-in-meeting.jpg" alt="People enjoying our app">
             <img class="img-group" src="./images/desktop/image-man-texting.jpg" alt="People enjoying our app">
         </div>
+        <p id="statement" class="mt64 mb16">Built for modern use</p>
 
     </section>
     <footer></footer>
