--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img class="hero-image hero-left" src="./images/tablet/image-hero.png" alt="User profile images">
         </div>
         <main id="content">
-            <h1 class="header-text">Group Chat for Everyone</h1>
+            <h1 class="header">Group Chat for Everyone</h1>
             <p class="mt24 mb24">Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
             <div class="btn-container flex">
                 <button class="btn btn-cyan mb16">Download <span>v1.3</span></button>
@@ -42,7 +42,8 @@
             <img class="img-group" src="./images/desktop/image-man-texting.jpg" alt="People enjoying our app">
         </div>
         <p id="statement" class="mt64 mb16">Built for modern use</p>
-
+        <h2 class="header mb32">Smarter meetings, all in one place</h2>
+        <p class="mb64">Send messages, share files, show your screen, and record your meetings — all in one workspace. Control who can join with invite-only team access, data encryption, and data export.</p>
     </section>
     <footer></footer>
     <!-- Script -->
