--- a/index.html
+++ b/index.html
@@ -43,9 +43,23 @@
         </div>
         <p id="statement" class="mt64 mb16">Built for modern use</p>
         <h2 class="header mb32">Smarter meetings, all in one place</h2>
-        <p class="mb64">Send messages, share files, show your screen, and record your meetings — all in one workspace. Control who can join with invite-only team access, data encryption, and data export.</p>
+        <p>Send messages, share files, show your screen, and record your meetings — all in one workspace. Control who can join with invite-only team access, data encryption, and data export.</p>
     </section>
-    <footer></footer>
+    <div id="icon-container">
+        <div  class="number-icon"></div>
+            <div class="vertical-line"></div>
+            <div class="numbered-circle">02</div>
+        </div>
+    </div>
+    
+
+    <footer>
+        <div id="footer-content">
+            <h2 class="header">Experience more together</h2>
+            <p class="mt24 mb24">Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
+            <button class="btn btn-purple">Download <span>v1.3</span></button>
+        </div>
+    </footer>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
