--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <section id="sub-section">
         <div id="img-container">
             <img class="img-group grid-right" src="./images/desktop/image-woman-in-videocall.jpg" alt="People enjoying our app">
-            <img class="img-group" src="./images/desktop/image-women-videochatting.jpg" alt="People enjoying our app">
+            <img class="img-group grid-left" src="./images/desktop/image-women-videochatting.jpg" alt="People enjoying our app">
             <img class="img-group grid-right" src="./images/desktop/image-men-in-meeting.jpg" alt="People enjoying our app">
-            <img class="img-group" src="./images/desktop/image-man-texting.jpg" alt="People enjoying our app">
+            <img class="img-group grid-left" src="./images/desktop/image-man-texting.jpg" alt="People enjoying our app">
         </div>
         <p id="statement" class="mt64 mb16">Built for modern use</p>
         <h2 class="header mb32">Smarter meetings, all in one place</h2>
@@ -51,8 +51,6 @@
             <div class="numbered-circle">02</div>
         </div>
     </div>
-    
-
     <footer>
         <div id="footer-content">
             <h2 class="header">Experience more together</h2>
