--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
             <img class="img-group grid-right" src="./images/desktop/image-men-in-meeting.jpg" alt="People enjoying our app">
             <img class="img-group grid-left" src="./images/desktop/image-man-texting.jpg" alt="People enjoying our app">
         </div>
-        <p id="statement" class="mt64 mb16">Built for modern use</p>
-        <h2 class="header mb32">Smarter meetings, all in one place</h2>
-        <p>Send messages, share files, show your screen, and record your meetings — all in one workspace. Control who can join with invite-only team access, data encryption, and data export.</p>
+        <div class="info-container">
+            <p id="statement" class="mt64 mb16">Built for modern use</p>
+            <h2 class="header mb32">Smarter meetings, all in one place</h2>
+            <p>Send messages, share files, show your screen, and record your meetings — all in one workspace. Control who can join with invite-only team access, data encryption, and data export.</p>
+        </div>
     </section>
     <div id="icon-container">
         <div  class="number-icon"></div>
