top content styles

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <img src="./images/logo.svg" alt="Company Logo">
         </div>
     </header>
-    <section>
-        <div class="flex">
+    <section id="top-section">
+        <div id="hero-left-container" class="flex">
             <img class="hero-image hero-left" src="./images/tablet/image-hero.png" alt="User profile images">
         </div>
         <main id="content">
@@ -26,7 +26,7 @@
                 <button class="btn btn-purple btn-small">What is it?</button>
             </div>
         </main>
-        <div class="flex">
+        <div id="hero-right-container" class="flex">
             <img class="hero-right" src="./images/desktop/image-hero-right.png" alt="User profile images">
         </div>
     </section>
