--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div id="footer-content">
             <h2 class="header">Experience more together</h2>
             <p class="mt24 mb24">Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
-            <button class="btn btn-purple">Download <span>v1.3</span></button>
+            <button id="footer-btn" class="btn btn-purple">Download <span>v1.3</span></button>
         </div>
     </footer>
     <!-- Script -->
